--- a/Data.Persistence.Implementation/packages.config
+++ b/Data.Persistence.Implementation/packages.config
@@ -6,6 +6,7 @@
   <package id="Carbon.Storage" version="1.15.1" targetFramework="net461" />
   <package id="Carbon.VersionControl" version="1.8.1" targetFramework="net461" />
   <package id="Carbon.Versioning" version="1.5.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="GitHub" version="1.12.1" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
