--- a/Application.Core/packages.config
+++ b/Application.Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="7.0.1" targetFramework="net461" />
   <package id="Carbon.Data.Protection" version="0.19.1" targetFramework="net461" />
   <package id="Carbon.Json" version="1.7.0" targetFramework="net461" />
   <package id="Carbon.Packaging" version="1.27.2" targetFramework="net461" />
@@ -10,4 +11,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
